@@ -1657,7 +1657,7 @@ create_iso_definition (cpp_reader *pfile, cpp_macro *macro)
              function-like macros, but not at the end.  */
           if (following_paste_op)
             {
-              cpp_error (pfile, CPP_DL_ERROR, "%s", paste_op_error_msg);
+              cpp_error (pfile, CPP_DL_ERROR, paste_op_error_msg);
               return false;
             }
           break;
@@ -1670,7 +1670,7 @@ create_iso_definition (cpp_reader *pfile, cpp_macro *macro)
              function-like macros, but not at the beginning.  */
           if (macro->count == 1)
             {
-              cpp_error (pfile, CPP_DL_ERROR, "%s", paste_op_error_msg);
+              cpp_error (pfile, CPP_DL_ERROR, paste_op_error_msg);
               return false;
             }
 
