@@ -1,3 +1,12 @@
+2008-12-30 Raphael Neider <rneider AT web.de>
+
+	* as/link/hc08/lkelf.c, as/link/lkaomf51.c, as/link/lklibr.c,
+	  as/link/z80/lkgb.c, debugger/mcs51/cmd.c, sim/ucsim/utils.cc,
+	  src/SDCCasm.c, support/Util/dbuf_string.c, support/cpp/c-ppoutput.c,
+	  support/cpp/libcpp/lex.c, support/cpp/libcpp/macro.c,
+	  support/librarian/sdcclib.c, support/makebin/makebin.c:
+	  partially revert changes from r5293..r5295
+
 2008-12-29 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peeph-z80.def:
